[gd_scene load_steps=6 format=3 uid="uid://tws10ln776dl"]

[ext_resource type="Script" path="res://UI/Potion/PotionSlot.gd" id="1_0j8x4"]
[ext_resource type="Texture2D" uid="uid://dy6bsmjnf8u44" path="res://Asset/UIUX/Container.png" id="1_me8y6"]
[ext_resource type="Texture2D" uid="uid://dw0wj1ftq8uye" path="res://Asset/potionSS.png" id="2_j4kdj"]
[ext_resource type="FontFile" uid="uid://cl3rxpo58micg" path="res://Asset/Font/Lambda-Regular.ttf" id="4_yua4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sff5m"]
atlas = ExtResource("2_j4kdj")
region = Rect2(0, 64, 32, 32)

[node name="PotionSlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(38, 38)
offset_right = 40.0
offset_bottom = 48.0
script = ExtResource("1_0j8x4")

[node name="Container" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_me8y6")

[node name="PotionTexture" type="TextureRect" parent="Container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_sff5m")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PotionAmount" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 24.0
offset_right = 213.0
offset_bottom = 252.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("4_yua4e")
theme_override_font_sizes/font_size = 200
text = "99
"

[node name="Darkened" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Darkened" to="." method="_on_darkened_mouse_entered"]
[connection signal="mouse_exited" from="Darkened" to="." method="_on_darkened_mouse_exited"]
